--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/coop_bd?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -9,3 +10,18 @@ spring.jpa.properties.hibernate.format_sql=true
 
 security.jwt.expiracao=30
 security.jwt.chave-assinatura=YSBsZW1icmUgw6kgYnJhbmNh
+
+# SMTP Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_ADDRESS}
+spring.mail.password=${MAIL_PASS}
+api.email.from.address=${MAIL_ADDRESS}
+api.email.from.name=${MAIL_NAME}
+
+# properties Email
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
