--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,13 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-# Upload imagem
+# AWS
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=${java.io.tmpdir}
+
+aws.s3.endpointUrl: https://s3.sa-east-1.amazonaws.com
+aws.s3.accessKey: ${S3_ACCESS_KEY}
+aws.s3.secretKey: ${S3_SECRET_KEY}
+aws.s3.bucketName: java-test-app-mvt-dh
+
+spring.servlet.multipart.max-file-size: 5MB
