--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/coop_bd?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
-spring.datasource.url=${FREE_MYSQL_URL}
+spring.datasource.url=${MYSQL_URL}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 
